--- a/src/components/numbers/numbers.css
+++ b/src/components/numbers/numbers.css
@@ -13,3 +13,9 @@ span {
   color: #ddd;
   cursor: not-allowed;
 }
+
+.used {
+  background-color: #aaddaa;
+  color: #99bb99;
+  cursor: not-allowed;
+}
